feat: llamacpp-chat-model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "langgraph-agent-template"
+name = "langchain-llamacpp-chat-model"
 version = "0.1.0"
 description = ""
 readme = "README.md"
@@ -8,6 +8,13 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "<=3.12.4,>=3.10"
+llama-cpp-python = "^0.2.81"
+langchain = "^0.2.6"
+anyio = "^4.4.0"
+fastapi = "^0.111.0"
+sse-starlette = "^2.1.2"
+starlette-context = "^0.3.6"
+pydantic-settings = "^2.3.4"
 
 
 [tool.poetry.group.dev.dependencies]
