--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ fastapi = "^0.111.0"
 sse-starlette = "^2.1.2"
 starlette-context = "^0.3.6"
 pydantic-settings = "^2.3.4"
+langchain-community = "^0.2.6"
+langchain-openai = "^0.1.14"
 
+[tool.poetry.group.test.dependencies]
+huggingface-hub = "^0.23.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
