chore: changed python version to be compatible with langchain deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = []
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "<=3.12.4,>=3.10"
+python = ">=3.9,<4.0"
 llama-cpp-python = "^0.2.81"
 langchain = "^0.2.6"
 anyio = "^4.4.0"
