--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install
+          poetry install --all-extras
 
       # Models should be stored using LFS or downloaded in the pipeline for tests to be run
       # - name: Run tests
