--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
           pip install poetry
           poetry install --all-extras
 
-      # Models should be stored using LFS or downloaded in the pipeline for tests to be run
+      # # Models should be stored using LFS or downloaded in the pipeline for tests to be run
+      # # GPU runners are not yet supported. But will be soon!! (https://github.blog/changelog/2023-10-31-run-your-ml-workloads-on-github-actions-with-gpu-runners/)
       # - name: Run tests
       #   run: |
       #     poetry run pytest
